# fusion_mapping

./: AUTHORS.md  CMakeLists.txt  FusionMappingConfig.cmake.in  LICENSE.md  README.md  package.xml
.github/workflows/: action.yml
apps/: CMakeLists.txt
apps/back_end/: CMakeLists.txt  back_end_node.cpp
apps/data_preprocess/: CMakeLists.txt  data_preprocess_node.cpp
apps/front_end/: CMakeLists.txt  front_end_node.cpp
apps/hesai_preprocess/: CMakeLists.txt  mapping_car_preprocess_node.cpp
apps/loop_closing/: CMakeLists.txt  loop_closing_node.cpp
apps/matching/: CMakeLists.txt  matching_node.cpp
apps/test/: CMakeLists.txt  test_frame_node.cpp
apps/viewer/: CMakeLists.txt  viewer_node.cpp
cmake/: FindG2O.cmake  geographic.cmake  global_defination.cmake
config/front_end/: gnss_config.yaml  imu_config.yaml  lidar_config.yaml
config/matching/: matching.yaml
example/: CMakeLists.txt
example/image_to_cloud/: CMakeLists.txt  test_image_to_cloud.cpp
example/rgbd_detect_feature/: CMakeLists.txt  rgbd_detect_feature.cpp
example/test_gl_calibration/: CMakeLists.txt  test_gl_calibration.cpp
example/test_ground_extract/: CMakeLists.txt  test_ground_extract.cpp
include/fusion_mapping/core/data_preprocess/: data_preprocess_flow.h  mapping_car_preprocess_flow.h
include/fusion_mapping/core/front_end/: front_end.h  front_end_flow.h
include/fusion_mapping/core/global_defination/: global_defination.h.in
include/fusion_mapping/core/matching/: matching.h  matching_flow.h
include/fusion_mapping/core/param/: front_param.h
include/fusion_mapping/core/publisher/: cloud_publisher.h  imu_publisher.h  key_frame_publisher.h  key_frames_publisher.h  loop_pose_publisher.h  odometry_publisher.h  tf_broadcaster.h  velocity_publisher.h
include/fusion_mapping/core/sensor_data/: cloud_data.h  gnss_data.h  imu_data.h  key_frame.h  loop_pose.h  point_type.h  (+2 more)
launch/: mapping.launch  mapping_with_aloam.launch  matching.launch
roscode/: CMakeLists.txt
roscode/tool_front_end/: CMakeLists.txt  test_front_end.cpp
roscode/tool_test/: CMakeLists.txt  test_function.cpp
src/: CMakeLists.txt
src/calibration/: lidar_to_vehicle.cc
src/calibration/component/: lidar_to_vehicle.cc
src/calibration/lidar_to_vehicle/: lidar_to_vehicle_flow.cc
src/data_preprocess/: data_preprocess_flow.cc  mapping_car_preprocess_flow.cc
src/front_end/: front_end.cc  front_end_flow.cc
src/mapping/back_end/: back_end.cc  back_end_flow.cc
src/mapping/front_end/: front_end.cc  front_end_flow.cc
src/mapping/loop_closing/: loop_closing.cc  loop_closing_flow.cc
src/mapping/viewer/: viewer.cc  viewer_flow.cc
src/matching/: matching.cc  matching_flow.cc
src/models/camera/rgbd/: image_to_cloud.cc  rgbd_base.cc
src/models/ceres_error/factor/: hand_eye_factor.cc
src/models/ceres_error/local_param/: pose_local_parameterization.cc
src/models/ceres_error/parameterization/: pose_parameterization.cc
src/models/cloud_filter/: box_filter.cc  no_filter.cc  voxel_filter.cc
src/models/feature/: cylinder.cc  ground_feature.cc
src/models/graph_optimizer/: interface_graph_optimizer.cc
src/models/graph_optimizer/g2o/: g2o_graph_optimizer.cc
src/models/registration/: ndt_registration.cc
src/models/scan_adjust/: distortion_adjust.cc
src/param/: front_param.cc
src/publisher/: cloud_publisher.cc  imu_publisher.cc  key_frame_publisher.cc  key_frames_publisher.cc  loop_closing.cc  odometry_publisher.cc  tf_broadcaster.cc  velocity_publisher.cc
src/sensor_data/: gnss_data.cc  imu_data.cc  key_frame.cc  loop_pose.cc  pose_data.cc  velocity_data.cc
src/subscriber/: cloud_subscriber.cc  gnss_subscriber.cc  imu_subscriber.cc  key_frame_subscriber.cc  key_frames_subscriber.cc  loop_pose_subscriber.cc  odometry_subscriber.cc  velocity_subscriber.cc
src/tf_listener/: tf_listener.cc
src/tools/: file_manager.cc  print_info.cc
test/: CMakeLists.txt
test/merge_ground/: CMakeLists.txt  merge_ground.cpp
(+48 files in other folders)
